Fix projects flex gap

--- a/themes/deruwe.me/assets/scss/components/_project.scss
+++ b/themes/deruwe.me/assets/scss/components/_project.scss
@@ -63,7 +63,7 @@
       justify-content: center;
     }
 
-    gap: 2rem;
+    gap: 5rem 2rem;
 
     @include desktop {
       gap: 5rem;
